[project]
name = "spatiotemporal-data-analysis"
version = "0.1.1"
description = "NUS ME5311 Project 1 — Spatio-temporal vector field data analysis"
authors = [
    { name = "Yu Huize", email = "hayes_yu@163.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
analyze = "main:main"
