[project]
name = "spatiotemporal-data-analysis"
version = "0.1.3"
description = "NUS ME5311 Project 1 — Spatio-temporal vector field data analysis"
authors = [
    { name = "Tan Kailai", email = "e1554333@u.nus.edu" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "ipython>=8.0",
]

[project.scripts]
analyze = "main:main"
